--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   firebase_auth: ^5.6.0
   flutter_keyboard_visibility: ^6.0.0
   firebase_database: ^11.3.7
+  cloud_functions: ^5.0.3
   google_sign_in: ^7.1.1
   fluttertoast: ^8.2.2
   url_launcher: ^6.3.0
